# HCL_Use_Case

./: .gitignore  README.md  justfile  pyproject.toml
dags/: load_student_json_dag.py  python_load_student_json_dag.py
dags/data/raw/: missed_days.json
dags/data/transformed/: students_inf_2024-01-28_22-08.csv
dags/scripts/: paths.py
data/raw/: students.json
scripts/: data_validation.py  paths.py
sql_scripts/: final_merge.sql
