[tool.poetry]
name = "hcl-use-case"
version = "0.1.0"
description = ""
authors = ["Fernando Nepomuceno <frnepom@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.0"
just = "^0.8.161"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
